Disable confetti. Fixed paragraph spacing

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -34,6 +34,10 @@
         margin-bottom: 20px;
     }
 
+    p {
+        margin-bottom: 1em;
+    }
+
 }
 
 @layer utilities {
